// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="sc-bxivhb iGpUBS Sidebar-resources"
  >
    <ul
      className="sc-ifAKCX gwNVWo"
    >
      <li
        className="sc-EHOje sc-gzVnrw aRIxx isSelected"
      >
        <a
          className="sc-bZQynM pgkFq"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              7
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            All
          </p>
        </a>
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource4"
          onClick={[Function]}
          title="resource4"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource4
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:36:03.000Z"
                title="2017-12-21T15:36:03.000Z"
              >
                &lt;5s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource9"
          onClick={[Function]}
          title="resource9"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource9
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:58.000Z"
                title="2017-12-21T15:35:58.000Z"
              >
                &lt;15s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource19"
          onClick={[Function]}
          title="resource19"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource19
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:48.000Z"
                title="2017-12-21T15:35:48.000Z"
              >
                &lt;30s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource29"
          onClick={[Function]}
          title="resource29"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource29
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:38.000Z"
                title="2017-12-21T15:35:38.000Z"
              >
                &lt;30s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource39"
          onClick={[Function]}
          title="resource39"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource39
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:28.000Z"
                title="2017-12-21T15:35:28.000Z"
              >
                &lt;45s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource49"
          onClick={[Function]}
          title="resource49"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource49
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:18.000Z"
                title="2017-12-21T15:35:18.000Z"
              >
                &lt;1m ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/resource54"
          onClick={[Function]}
          title="resource54"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            resource54
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:13.000Z"
                title="2017-12-21T15:35:13.000Z"
              >
                &lt;1m ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="sc-bxivhb iGpUBS Sidebar-resources"
  >
    <ul
      className="sc-ifAKCX gwNVWo"
    >
      <li
        className="sc-EHOje sc-gzVnrw aRIxx isSelected"
      >
        <a
          className="sc-bZQynM pgkFq"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span>
               
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            All
          </p>
        </a>
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="sc-bxivhb iGpUBS Sidebar-resources"
  >
    <ul
      className="sc-ifAKCX gwNVWo"
    >
      <li
        className="sc-EHOje sc-gzVnrw aRIxx isSelected"
      >
        <a
          className="sc-bZQynM pgkFq"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              2
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            All
          </p>
        </a>
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            vigoda
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:36:07.000Z"
                title="2017-12-21T15:36:07.000Z"
              >
                &lt;5s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              12.3s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            snack
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi"
            >
              <time
                dateTime="2017-12-21T15:35:57.000Z"
                title="2017-12-21T15:35:57.000Z"
              >
                &lt;15s ago
              </time>
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz"
            >
              50.0s
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="sc-bxivhb iGpUBS Sidebar-resources"
  >
    <ul
      className="sc-ifAKCX gwNVWo"
    >
      <li
        className="sc-EHOje sc-gzVnrw aRIxx isSelected"
      >
        <a
          className="sc-bZQynM pgkFq"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              2
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            All
          </p>
        </a>
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            vigoda
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi isEmpty"
            >
              —
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz isEmpty"
            >
              —
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-EHOje hBWvIm  isBuilding"
      >
        <a
          className="sc-bZQynM pgkFq SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <p
            className="sc-dnqmqq sc-iwsKbI esoWBa"
          >
            snack
          </p>
          <div
            className="sc-gZMcBi gZOvNJ"
          >
            <p
              className="sc-dnqmqq sc-VigVT coNkYi isEmpty"
            >
              —
            </p>
            <p
              className="sc-dnqmqq sc-gqjmRU jmnxMz isEmpty"
            >
              —
            </p>
          </div>
        </a>
        <button
          className="sc-htpNat fZgzFb SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
